--- a/application/views/scripts/porto/relatorioindex.phtml
+++ b/application/views/scripts/porto/relatorioindex.phtml
@@ -28,13 +28,10 @@
                 </select>
             </div>
             <div class="form-esq">
-            <label>Data Inicial</label>
-            <input type="month" name="dataini" min="2013-11" max="<?= date("Y-m") ?>"/>
+            <label>Ano:</label>
+            <input type="number" name="ano" min="2013" max="<?= date("Y") ?>"/>
             </div>
-            <div class="form-esq">
-            <label>Data Final</label>
-            <input type="month" name="datafim" min="2013-11" max="2014-12" />
-            </div>
+            
             <br/>
             <input type="submit" value="Enviar"/>
         </fieldset>
