Descricao dos portos

--- a/application/views/scripts/porto/badu.phtml
+++ b/application/views/scripts/porto/badu.phtml
@@ -210,15 +210,13 @@
 
 
 
-<h4>Ilhéus - Sede Municipal – Amendoeira</h4>
-<p>O ponto de desembarque da Amendoeira localiza-se na Avenida Litorânea Norte, no bairro do Malhado (Ilhéus, BA).</p>
+<h4>Uruçuca- Serra Grande – Vila Badu</h4>
+<p>Localizado em uma vila de pescadores que atuam, principalmente, na praia do Pompilho e rio Tijuípe. O Ponto de monitoramento da Vila Badu, foi inserido no projeto em 1º de abril de 2014.</p>
 
 <img class="img-porto" src="<?= 'img/portos/'.$this->porto.'.jpg'?>"/>
 
-Figura: Amendoeira.	
-<p>Este ponto é utilizado por atravessadores e pescadores para comercializar o pescado. A área monitorada envolve pescadores que desembarcam em um local abrigado, a esquerda da área militar – pescarias de linha e emalhe A maioria dos pescadores vive exclusivamente da pesca, mas nem todos são colonizados;</p>
-
-<p>A arte de pesca mais utilizada pelos pescadores da Amendoeira é a linha de mão, seguida pelo calão, eventualmente, os pescadores realizam pescarias com outras artes de pesca, entre elas: rede de emalhe, mergulho, groseira e tarrafa.</p>
+Figura: Vila Badu.	
+<p>As principais artes de pesca utilizadas pelos pescadores da Vila Badu são a tarrafa e a linha de mão.</p>
 
 <br/>
 <div class="box-chart">
