--- a/application/views/scripts/porto/barra.phtml
+++ b/application/views/scripts/porto/barra.phtml
@@ -210,15 +210,15 @@
 
 
 
-<h4>Ilhéus - Sede Municipal – Amendoeira</h4>
-<p>O ponto de desembarque da Amendoeira localiza-se na Avenida Litorânea Norte, no bairro do Malhado (Ilhéus, BA).</p>
+<h4>Ilhéus - São Miguel – Barra/Balsa</h4>
+<p>O ponto de desembarque da Barra está localizado no bairro de mesmo nome, na margem direita do Rio Almada, próximo a sua desembocadura.</p>
 
 <img class="img-porto" src="<?= 'img/portos/'.$this->porto.'.jpg'?>"/>
 
-Figura: Amendoeira.	
-<p>Este ponto é utilizado por atravessadores e pescadores para comercializar o pescado. A área monitorada envolve pescadores que desembarcam em um local abrigado, a esquerda da área militar – pescarias de linha e emalhe A maioria dos pescadores vive exclusivamente da pesca, mas nem todos são colonizados;</p>
+Figura: Barra/Balsa.	
+<p>A maioria das embarcações monitoradas nesse ponto atraca em local próximo a passarela que liga a Barra ao bairro do São Miguel, situado na margem esquerda do rio Almada. Ainda na margem esquerda, existem outros pontos de atracação (balsa) onde os barcos são contabilizados quando não é possível realizar a entrevista de desembarque.</p>
 
-<p>A arte de pesca mais utilizada pelos pescadores da Amendoeira é a linha de mão, seguida pelo calão, eventualmente, os pescadores realizam pescarias com outras artes de pesca, entre elas: rede de emalhe, mergulho, groseira e tarrafa.</p>
+<p>A arte de pesca mais utilizada pelos pescadores da Barra/Balsa é o arrasto, perfazendo mais de 90% dos desembarques monitorados.</p>
 
 <br/>
 <div class="box-chart">
