--- a/application/views/scripts/porto/mamoa.phtml
+++ b/application/views/scripts/porto/mamoa.phtml
@@ -210,15 +210,15 @@
 
 
 
-<h4>Ilhéus - Sede Municipal – Amendoeira</h4>
-<p>O ponto de desembarque da Amendoeira localiza-se na Avenida Litorânea Norte, no bairro do Malhado (Ilhéus, BA).</p>
+<h4>Ilhéus - Norte – Mamoã</h4>
+<p>Mamoã é uma das praias do norte de Ilhéus, localizada na Rodovia Ilhéus-Itacaré. O bairro é conhecido por Mamoã ou Aritaguá II e possui nas suas proximidades um povoado conhecido como Retiro, onde residem alguns pescadores.</p>
 
 <img class="img-porto" src="<?= 'img/portos/'.$this->porto.'.jpg'?>"/>
 
-Figura: Amendoeira.	
-<p>Este ponto é utilizado por atravessadores e pescadores para comercializar o pescado. A área monitorada envolve pescadores que desembarcam em um local abrigado, a esquerda da área militar – pescarias de linha e emalhe A maioria dos pescadores vive exclusivamente da pesca, mas nem todos são colonizados;</p>
+Figura: Mamoã.	
+<p>De forma geral, a comercialização dos pescados é realizada na comunidade, quando a captura é elevada os pescados podem ser vendidos para a Colônia. </p>
 
-<p>A arte de pesca mais utilizada pelos pescadores da Amendoeira é a linha de mão, seguida pelo calão, eventualmente, os pescadores realizam pescarias com outras artes de pesca, entre elas: rede de emalhe, mergulho, groseira e tarrafa.</p>
+<p>A principal arte de pesca foi a linha de mão, seguida pela pescaria de calão (Figura 131). Alguns pescadores de Mamoã realizam diferentes tipos de pescarias, alternando o petrecho utilizado.</p>
 
 <br/>
 <div class="box-chart">
