--- a/application/views/scripts/porto/ramo.phtml
+++ b/application/views/scripts/porto/ramo.phtml
@@ -210,15 +210,15 @@
 
 
 
-<h4>Ilhéus - Sede Municipal – Amendoeira</h4>
-<p>O ponto de desembarque da Amendoeira localiza-se na Avenida Litorânea Norte, no bairro do Malhado (Ilhéus, BA).</p>
+<h4>Ilhéus - Norte – Ponta do Ramo</h4>
+<p>A vila de pescadores da Ponta do Ramo fica localizada num bairro que recebe o mesmo nome, ao longo da rodovia que liga Ilhéus à Itacaré. Alguns pescadores que desembarcam na praia de Ponta do Ramo residem em Serra Grande.</p>
 
 <img class="img-porto" src="<?= 'img/portos/'.$this->porto.'.jpg'?>"/>
 
-Figura: Amendoeira.	
-<p>Este ponto é utilizado por atravessadores e pescadores para comercializar o pescado. A área monitorada envolve pescadores que desembarcam em um local abrigado, a esquerda da área militar – pescarias de linha e emalhe A maioria dos pescadores vive exclusivamente da pesca, mas nem todos são colonizados;</p>
+Figura: Ponta do Ramo.	
+<p>O pescado é comercializado, principalmente, na comunidade para moradores e turistas eventuais e na localidade de Serra Grande. </p>
 
-<p>A arte de pesca mais utilizada pelos pescadores da Amendoeira é a linha de mão, seguida pelo calão, eventualmente, os pescadores realizam pescarias com outras artes de pesca, entre elas: rede de emalhe, mergulho, groseira e tarrafa.</p>
+<p>Neste ponto os pescadores utilizam jangadas, de madeira e de fibra, e barcos, e a área de pesca se estende de Serra Grande até a Ponta da Tulha. A principal arte de pesca monitorada da Ponta da Ramos é a linha de mão. Eventualmente, outras pescarias foram registradas, como calão, groseira, mergulho e tarrafa.</p>
 
 <br/>
 <div class="box-chart">
