--- a/application/views/scripts/porto/tulha.phtml
+++ b/application/views/scripts/porto/tulha.phtml
@@ -210,15 +210,15 @@
 
 
 
-<h4>Ilhéus - Sede Municipal – Amendoeira</h4>
-<p>O ponto de desembarque da Amendoeira localiza-se na Avenida Litorânea Norte, no bairro do Malhado (Ilhéus, BA).</p>
+<h4>Ilhéus - Norte – Ponta da Tulha</h4>
+<p>A Ponta da Tulha é uma vila de pescadores localizada na rodovia Ilhéus-Itacaré. </p>
 
 <img class="img-porto" src="<?= 'img/portos/'.$this->porto.'.jpg'?>"/>
 
-Figura: Amendoeira.	
-<p>Este ponto é utilizado por atravessadores e pescadores para comercializar o pescado. A área monitorada envolve pescadores que desembarcam em um local abrigado, a esquerda da área militar – pescarias de linha e emalhe A maioria dos pescadores vive exclusivamente da pesca, mas nem todos são colonizados;</p>
+Figura: Ponta da Tulha.	
+<p>O pescado é comercializado, principalmente, na comunidade para moradores, peixarias e cabanas de praia.</p>
 
-<p>A arte de pesca mais utilizada pelos pescadores da Amendoeira é a linha de mão, seguida pelo calão, eventualmente, os pescadores realizam pescarias com outras artes de pesca, entre elas: rede de emalhe, mergulho, groseira e tarrafa.</p>
+<p>Os pescadores da Ponta da Tulha realizam pescarias com diferentes artes de pesca. As principais artes de pesca foram a linha de mão, seguida pela pescaria de calão.</p>
 
 <br/>
 <div class="box-chart">
