--- a/application/views/scripts/porto/forte.phtml
+++ b/application/views/scripts/porto/forte.phtml
@@ -102,7 +102,7 @@
    };
     
    var entrevistasByMes2 = {
-       labels: <?= $this->quantLabelsCalao ?>,
+       labels: <?= $this->quantLabelsTarrafa ?>,
        datasets: [
            {
                label: "Quantidade de Entrevistas Por Mês",
@@ -112,12 +112,12 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->quantEntrevistasCalao ?>
+               data: <?= $this->quantEntrevistasTarrafa ?>
            }
        ]
    };
       var capturaByMes2 = {
-       labels: <?= $this->countCaptLabelsCalao ?>,
+       labels: <?= $this->countCaptLabelsTarrafa ?>,
        datasets: [
            {
                label: "Captura total por mês",
@@ -127,12 +127,12 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->countCaptPesoCalao ?>
+               data: <?= $this->countCaptPesoTarrafa ?>
            }
        ]
    };
    var Embarcacoes2 = {
-       labels: <?= $this->labelBarcosCalao ?>,
+       labels: <?= $this->labelBarcosTarrafa ?>,
        datasets: [
            {
                label: "Barcos Mais Monitorados",
@@ -142,14 +142,14 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->quantBarcosCalao ?>
+               data: <?= $this->quantBarcosTarrafa ?>
            }
        ]
    };
    
 //   
    var especiesCapturadas2 = {
-       labels: <?= $this->labelCapturaCalao ?>,
+       labels: <?= $this->labelCapturaTarrafa ?>,
        datasets: [
            {
                label: "Quantidade",
@@ -159,7 +159,7 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->pesoCapturaCalao ?>
+               data: <?= $this->pesoCapturaTarrafa ?>
            }
        ]
    };
@@ -210,15 +210,13 @@
 
 
 
-<h4>Ilhéus - Sede Municipal – Amendoeira</h4>
-<p>O ponto de desembarque da Amendoeira localiza-se na Avenida Litorânea Norte, no bairro do Malhado (Ilhéus, BA).</p>
+<h4>Itacaré - Porto do Forte</h4>
+<p>Localizado à margem direita do Rio de Contas, próximo a sua desembocadura.</p>
 
 <img class="img-porto" src="<?= 'img/portos/'.$this->porto.'.jpg'?>"/>
 
-Figura: Amendoeira.	
-<p>Este ponto é utilizado por atravessadores e pescadores para comercializar o pescado. A área monitorada envolve pescadores que desembarcam em um local abrigado, a esquerda da área militar – pescarias de linha e emalhe A maioria dos pescadores vive exclusivamente da pesca, mas nem todos são colonizados;</p>
-
-<p>A arte de pesca mais utilizada pelos pescadores da Amendoeira é a linha de mão, seguida pelo calão, eventualmente, os pescadores realizam pescarias com outras artes de pesca, entre elas: rede de emalhe, mergulho, groseira e tarrafa.</p>
+Figura: Porto do Forte.
+<p>No Porto do Forte, a maior quantidade de desembarques é da pesca de arrasto de fundo.</p>
 
 <br/>
 <div class="box-chart">
