--- a/application/views/scripts/porto/prainha.phtml
+++ b/application/views/scripts/porto/prainha.phtml
@@ -102,7 +102,7 @@
    };
     
    var entrevistasByMes2 = {
-       labels: <?= $this->quantLabelsCalao ?>,
+       labels: <?= $this->quantLabelsArrasto ?>,
        datasets: [
            {
                label: "Quantidade de Entrevistas Por Mês",
@@ -112,12 +112,12 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->quantEntrevistasCalao ?>
+               data: <?= $this->quantEntrevistasArrasto ?>
            }
        ]
    };
       var capturaByMes2 = {
-       labels: <?= $this->countCaptLabelsCalao ?>,
+       labels: <?= $this->countCaptLabelsArrasto ?>,
        datasets: [
            {
                label: "Captura total por mês",
@@ -127,12 +127,12 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->countCaptPesoCalao ?>
+               data: <?= $this->countCaptPesoArrasto ?>
            }
        ]
    };
    var Embarcacoes2 = {
-       labels: <?= $this->labelBarcosCalao ?>,
+       labels: <?= $this->labelBarcosArrasto ?>,
        datasets: [
            {
                label: "Barcos Mais Monitorados",
@@ -142,14 +142,14 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->quantBarcosCalao ?>
+               data: <?= $this->quantBarcosArrasto ?>
            }
        ]
    };
    
 //   
    var especiesCapturadas2 = {
-       labels: <?= $this->labelCapturaCalao ?>,
+       labels: <?= $this->labelCapturaArrasto ?>,
        datasets: [
            {
                label: "Quantidade",
@@ -159,7 +159,7 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->pesoCapturaCalao ?>
+               data: <?= $this->pesoCapturaArrasto ?>
            }
        ]
    };
@@ -210,15 +210,15 @@
 
 
 
-<h4>Ilhéus - Sede Municipal – Amendoeira</h4>
-<p>O ponto de desembarque da Amendoeira localiza-se na Avenida Litorânea Norte, no bairro do Malhado (Ilhéus, BA).</p>
+<h4>Ilhéus - Sede Municipal – Prainha</h4>
+<p>O ponto de monitoramento, conhecido como Prainha, localiza-se no bairro Cidade Nova, próximo ao Iate Clube de Ilhéus.</p>
+
+<p>Ao lado da rampa de desembarque existe uma fábrica de gelo, que facilita a compra deste insumo.</p>
 
 <img class="img-porto" src="<?= 'img/portos/'.$this->porto.'.jpg'?>"/>
 
-Figura: Amendoeira.	
-<p>Este ponto é utilizado por atravessadores e pescadores para comercializar o pescado. A área monitorada envolve pescadores que desembarcam em um local abrigado, a esquerda da área militar – pescarias de linha e emalhe A maioria dos pescadores vive exclusivamente da pesca, mas nem todos são colonizados;</p>
-
-<p>A arte de pesca mais utilizada pelos pescadores da Amendoeira é a linha de mão, seguida pelo calão, eventualmente, os pescadores realizam pescarias com outras artes de pesca, entre elas: rede de emalhe, mergulho, groseira e tarrafa.</p>
+Figura: Prainha.	
+<p>Na Prainha foram identificadas quatro artes de pesca: linha de mão, arrasto de fundo, mergulho, groseira. A principal arte de pesca utilizada é a linha de mão, seguida pelo arrasto de fundo.</p>
 
 <br/>
 <div class="box-chart">
