--- a/application/views/scripts/porto/urucutuca.phtml
+++ b/application/views/scripts/porto/urucutuca.phtml
@@ -38,7 +38,7 @@
    };
  
    var entrevistasByMes1 = {
-       labels: <?= $this->quantLabelsLinha ?>,
+       labels: <?= $this->quantLabelsManzua ?>,
        datasets: [
            {
                label: "Quantidade de Entrevistas Por Mês",
@@ -48,12 +48,12 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->quantEntrevistasLinha ?>
+               data: <?= $this->quantEntrevistasManzua ?>
            }
        ]
    };
    var capturaByMes1 = {
-       labels: <?= $this->countCaptLabelsLinha ?>,
+       labels: <?= $this->countCaptLabelsManzua ?>,
        datasets: [
            {
                label: "Captura total por mês",
@@ -63,12 +63,12 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->countCaptPesoLinha ?>
+               data: <?= $this->countCaptPesoManzua ?>
            }
        ]
    };
    var Embarcacoes1 = {
-       labels: <?= $this->labelBarcosLinha ?>,
+       labels: <?= $this->labelBarcosManzua ?>,
        datasets: [
            {
                label: "Barcos Mais Monitorados",
@@ -78,7 +78,7 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->quantBarcosLinha ?>
+               data: <?= $this->quantBarcosManzua ?>
            }
        ]
    };
@@ -86,7 +86,7 @@
 
 //   
    var especiesCapturadas1 = {
-       labels: <?= $this->labelCapturaLinha ?>,
+       labels: <?= $this->labelCapturaManzua ?>,
        datasets: [
            {
                label: "Quantidade",
@@ -96,13 +96,13 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->pesoCapturaLinha ?>
+               data: <?= $this->pesoCapturaManzua ?>
            }
        ]
    };
     
    var entrevistasByMes2 = {
-       labels: <?= $this->quantLabelsCalao ?>,
+       labels: <?= $this->quantLabelsVaraPesca ?>,
        datasets: [
            {
                label: "Quantidade de Entrevistas Por Mês",
@@ -112,12 +112,12 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->quantEntrevistasCalao ?>
+               data: <?= $this->quantEntrevistasVaraPesca ?>
            }
        ]
    };
       var capturaByMes2 = {
-       labels: <?= $this->countCaptLabelsCalao ?>,
+       labels: <?= $this->countCaptLabelsVaraPesca ?>,
        datasets: [
            {
                label: "Captura total por mês",
@@ -127,12 +127,12 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->countCaptPesoCalao ?>
+               data: <?= $this->countCaptPesoVaraPesca ?>
            }
        ]
    };
    var Embarcacoes2 = {
-       labels: <?= $this->labelBarcosCalao ?>,
+       labels: <?= $this->labelBarcosVaraPesca ?>,
        datasets: [
            {
                label: "Barcos Mais Monitorados",
@@ -142,14 +142,14 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->quantBarcosCalao ?>
+               data: <?= $this->quantBarcosVaraPesca ?>
            }
        ]
    };
    
 //   
    var especiesCapturadas2 = {
-       labels: <?= $this->labelCapturaCalao ?>,
+       labels: <?= $this->labelCapturaVaraPesca ?>,
        datasets: [
            {
                label: "Quantidade",
@@ -159,7 +159,7 @@
                pointStrokeColor: "#fff",
                pointHighlightFill: "#fff",
                pointHighlightStroke: "rgba(95,48,43,1)",
-               data: <?= $this->pesoCapturaCalao ?>
+               data: <?= $this->pesoCapturaVaraPesca ?>
            }
        ]
    };
@@ -210,15 +210,13 @@
 
 
 
-<h4>Ilhéus - Sede Municipal – Amendoeira</h4>
-<p>O ponto de desembarque da Amendoeira localiza-se na Avenida Litorânea Norte, no bairro do Malhado (Ilhéus, BA).</p>
+<h4>Ilhéus - Rio Almada – Urucutuca</h4>
+<p>O ponto de desembarque de Urucutuca está localizado no município de Ilhéus, no distrito com mesmo nome. A pesca nesse local ocorre no Rio Almada. O pescado é vendido na comunidade ou nas feiras.</p>
 
 <img class="img-porto" src="<?= 'img/portos/'.$this->porto.'.jpg'?>"/>
 
-Figura: Amendoeira.	
-<p>Este ponto é utilizado por atravessadores e pescadores para comercializar o pescado. A área monitorada envolve pescadores que desembarcam em um local abrigado, a esquerda da área militar – pescarias de linha e emalhe A maioria dos pescadores vive exclusivamente da pesca, mas nem todos são colonizados;</p>
-
-<p>A arte de pesca mais utilizada pelos pescadores da Amendoeira é a linha de mão, seguida pelo calão, eventualmente, os pescadores realizam pescarias com outras artes de pesca, entre elas: rede de emalhe, mergulho, groseira e tarrafa.</p>
+Figura: Urucutuca.	
+<p>As pescarias em Urucutuca são realizadas por meio do uso compartilhado das canoas (manzuá) ou desembarcadas (outras artes). A principal arte de pesca é o manzuá, seguido pela vara de pesca.</p>
 
 <br/>
 <div class="box-chart">
